[tool.poetry]
name = "adarklib"
version = "0.1.0"
description = "Python library to fetch download links from dark-world.ru asynchronously"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
aiohttp = "^3.4"
cchardet = "^2.1"
aiodns = "^1.1"
beautifulsoup4 = "^4.6"
lxml = "^4.2"
python-dateutil = "^2.7"
simplejson = "^3.16"
marshmallow = {version = "^3.0",allows-prereleases = true}
requests = "^2.19"

[tool.poetry.dev-dependencies]
pre-commit = "^1.11"
pylint = "^2.1"
