[tool.poetry]
name = "adarklib"
version = "0.1.0"
description = "Python library to fetch download links from dark-world.ru asynchronously"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/pythoninja/adarklib"
repository = "https://github.com/pythoninja/adarklib"
documentation = "https://adarklib.readthedocs.io"

keywords = ["asynchronous", "downloader", "fetcher", "library"]


classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = ">=3.6"
aiohttp = "^3.4"
cchardet = "^2.1"
aiodns = "^1.1"
beautifulsoup4 = "^4.6"
lxml = "^4.3"
python-dateutil = "^2.7"
simplejson = "^3.16"
marshmallow = {version = "^2.16",allows-prereleases = true}

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pre-commit = "^1.14"
pyyaml = {version = "^5.1", allows-prereleases = true}